<resources>
    <string name="app_name">Pathfinder</string>
    <string name="action_settings">Settings</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <string name="search">Search</string>
    <string name="no_map_header">Well, this is awkward.</string>
    <string name="no_map_desc">It looks like the building you are in is not Pathfinder-enabled. In the mean time, why not look for locations that are?</string>
    <string name="building_search_box_hint">Building Search Box</string>
    <string name="destination_search_box">Destination Search Box</string>
    <string name="search_for_a_destination">Search for a Destination…</string>
    <string name="title_activity_navigation_search">NavigationSearchActivity</string>
    <string name="dest_not_found">Oops! We couldn\'t find anything with those search terms.</string>
    <string name="room_requires_auth">This room requires authorization.</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_map_search">MapSearchActivity</string>
    <string name="search_for_a_map">Search for a Map</string>
    <string name="title_activity_view_map">ViewMapActivity</string>
    <string name="submit_button">Submit Button</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="it_looks_like_your_search_request_turned_up_blank">It looks like your search request turned up blank!</string>
    <string name="sorry_about_that">Sorry about that!</string>
    <string name="welcome_to_pathfinder">Welcome to Pathfinder!</string>
    <string name="pathfinder">Pathfinder</string>
    <string name="name">Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_a_building">Find a Building</string>
    <string name="settings">Settings</string>
    <string name="about_pathfinder">About Pathfinder</string>
    <string name="pathfinder_logo">Pathfinder logo</string>
    <string name="oakland_university">Oakland University</string>
    <string name="no_implied_warranty">This app and its corresponding web interface is the result of a collaborative effort of undergraduate students at Oakland University. It is distributed in the hopes that someone may find it useful but without any implied warranty.</string>
    <string name="search_for_a_building">Search for a Building</string>
</resources>
