<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10pt"
    android:orientation="vertical"
    tools:context=".UI.MapFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/map_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/destination_search_box"
            android:inputType="textNoSuggestions|textPersonName|text"
            android:text="@string/search_for_a_destination"
            android:autofillHints="" />

        <ImageButton
            android:id="@+id/map_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/search"
            android:onClick="onSearchSubmit"
            android:scaleType="center"
            android:src="@android:drawable/ic_menu_search" />

    </LinearLayout>
</LinearLayout>